--- a/main.html
+++ b/main.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Gaia's Army: The code of time</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <h1>The Gaia's Army: The code of time.</h1>
-    <canvas id="" width="750" height="750"></canvas>
+    <canvas id="canvas" width="1000" height="800"></canvas>
     <p>Game made by Daniel "Bardo" López</p>
     <script src=""></script>
     <script src=""></script>
