add id's on HTML

--- a/main.html
+++ b/main.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h1>The Gaia's Army: The code of time.</h1>
-    <canvas id="canvas" width="1000" height="800"></canvas>
+    <div id="intro"></div>
+    <div id="game">
+        <canvas id="canvas" width="1000" height="800"></canvas>
+    </div>
+    <div id="gameover"></div>
     <p>Game made by Daniel "Bardo" López</p>
     <script src=""></script>
     <script src=""></script>
