classes added on char js

--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
     <div id="intro"></div>
     <div id="game">
         <canvas id="canvas" width="1000" height="800"></canvas>
+        <button id="start">START</button>
     </div>
     <div id="gameover"></div>
     <p>Game made by Daniel "Bardo" López</p>
