--- a/main.html
+++ b/main.html
@@ -16,7 +16,8 @@
     </div>
     <div id="gameover"></div>
     <p>Game made by Daniel "Bardo" López</p>
-    <script src=""></script>
-    <script src=""></script>
+    <script src="/js/game.js"></script>
+    <script src="/js/characters.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
