main.js & html modified

--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>The Gaia's Army: The code of time.</h1>
-    <div id="intro"></div>
-    <div id="game">
-        <canvas id="canvas" width="1000" height="800"></canvas>
+    <div id="splash" class="splash"></div>
+    <div id="game" class="game">
+        <canvas id="canvas" width="500" height="500"></canvas>
         <button id="start">START</button>
     </div>
     <div id="gameover"></div>
