--- a/main.html
+++ b/main.html
@@ -9,15 +9,19 @@
 </head>
 <body>
     <h1>The Gaia's Army: The code of time.</h1>
-    <div id="splash" class="splash"></div>
+    <div id="splash" class="splash">
+        <div>
+            <button id="play">Enter the Journey</button>
+        </div>
+    </div>
     <div id="game" class="game">
-        <canvas id="canvas" width="500" height="500"></canvas>
+        <canvas id="canvas" width="300" height="300"></canvas>
         <button id="start">START</button>
     </div>
     <div id="gameover"></div>
-    <p>Game made by Daniel "Bardo" López</p>
-    <script src="/js/game.js"></script>
+    
     <script src="/js/characters.js"></script>
+    <script src="/js/game.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
