--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button id="gameoverButton">Game Over</button>
     </div>
     
+    <script src="/js/map.js"></script>
     <script src="/js/characters.js"></script>
     <script src="/js/game.js"></script>
     <script src="/js/main.js"></script>
