backgrounf imgs added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>The Gaia's Army: The code of time.</h1>
+    <div class="container">
+        <h1>The Gaia's Army: The code of time.</h1>
     <div id="splash" class="splash">
         <div>
             <button id="play">play</button>
@@ -21,6 +22,8 @@
     <div id="gameover" class="hidden">
         <button id="gameoverButton">Game Over</button>
     </div>
+    </div>
+    
     
     <script src="/js/map.js"></script>
     <script src="/js/characters.js"></script>
