--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="play">play</button>
         </div>
     </div>
-    <div id="game" class="game hidden">
+    <div id="game" class="hidden">
         <canvas id="canvas" width="500" height="500"></canvas>
         <button id="start">START</button>
     </div>
